<resources>
    <string name="app_name">Cloud Connector Sample Application</string>
    <string name="connector">Connector Service</string>
    <string name="status">Connector status:</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_disconnecting">Disconnecting...</string>
    <string name="device_id">Device ID:</string>
    <string name="auto_connect">Enable auto-connect</string>
    <string name="reconnect">Enable reconnect</string>
    <string name="reconnect_time">Time before reconnecting:</string>
    <string name="enable_secure_connection">Enable secure connection</string>
    <string name="enable_compression">Enable messaging compression</string>
    <string name="vendor_id">Device vendor ID:</string>
    <string name="device_name">Device name:</string>
    <string name="device_description">Device description:</string>
    <string name="contact">Contact information:</string>
    <string name="url">Connection URL:</string>
    <string name="device_info">Device Information</string>
    <string name="unknown">Unknown</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="seconds">seconds</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="datapoints">Send data-points</string>
    <string name="button_close">Close</string>
    <string name="button_send">Send</string>
    <string name="title_data_point">Send Data Point</string>
    <string name="description_data_point">Configure the data points to be sent to Remote Manager</string>
    <string name="data_point_type">Data point type: </string>
    <string name="data_point_value">Data point value: </string>
    <string name="default_data_point_value">1234</string>
    <string name="number_of_data_points">Number of data points to send: </string>
    <string name="title_cloud_connector">Cloud Connector Sample Application</string>
    <string name="enable_system_monitor">Enable system monitor</string>
    <array name="data_point_types">
        <item>INTEGER</item>
        <item>LONG</item>
        <item>FLOAT</item>
        <item>DOUBLE</item>
        <item>STRING</item>
        <item>BINARY (BASE64)</item>
        <item>BINARY (RAW)</item>
    </array>
</resources>
