<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="5dip"
    android:paddingBottom="15dip"
    android:background="@color/white"
    android:baselineAligned="true">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:background="@color/dark_gray"
        android:textColor="@color/white"
        android:textAppearance="@style/panel_title"
        android:text="@string/title_cloud_connector"/>

    <Switch
        android:id="@+id/connector_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connector"
        android:layout_below="@id/main_title"
        android:layout_marginTop="7dip"
        android:textAppearance="@style/standard"/>

    <TextView
        android:id="@+id/connector_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_disconnected"
        android:layout_below="@id/connector_switch"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="5dip"
        android:gravity="right"
        android:textColor="@color/red"
        android:textAppearance="@style/standard"/>

    <TextView
        android:id="@+id/device_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_info"
        android:layout_below="@id/connector_switch"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="5dip"
        android:textAppearance="@style/standard"/>

    <LinearLayout
        android:id="@+id/separator_1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/black"
        android:layout_below="@id/device_info">
    </LinearLayout>

    <TextView
        android:id="@+id/device_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_id"
        android:layout_below="@id/separator_1"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:textAppearance="@style/standard"/>

    <TextView
        android:id="@+id/device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:layout_below="@id/separator_1"
        android:layout_toRightOf="@+id/compression"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:layout_marginRight="5dip"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:textAppearance="@style/standard"/>

    <TextView
        android:id="@+id/device_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name"
        android:layout_below="@id/device_id_label"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:textAppearance="@style/standard"/>

    <EditText
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:layout_below="@id/device_id_label"
        android:layout_toRightOf="@+id/compression"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/device_name_label"
        android:gravity="right"
        android:textAppearance="@style/standard"/>

    <TextView
        android:id="@+id/device_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_description"
        android:layout_below="@id/device_name_label"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:textAppearance="@style/standard"/>

    <EditText
        android:id="@+id/device_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:layout_below="@id/device_name_label"
        android:layout_toRightOf="@+id/compression"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/device_description_label"
        android:gravity="right"
        android:textAppearance="@style/standard"/>

    <TextView
        android:id="@+id/contact_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_below="@id/device_description_label"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:textAppearance="@style/standard"/>

    <EditText
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:layout_below="@id/device_description_label"
        android:layout_toRightOf="@+id/compression"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/contact_label"
        android:gravity="right"
        android:textAppearance="@style/standard"/>

    <TextView
        android:id="@+id/vendor_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vendor_id"
        android:layout_below="@id/contact_label"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:textAppearance="@style/standard"/>

    <EditText
        android:id="@+id/vendor_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:layout_below="@id/contact_label"
        android:layout_toRightOf="@+id/compression"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/vendor_id_label"
        android:gravity="right"
        android:textAppearance="@style/standard"/>

    <TextView
        android:id="@+id/connection_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_settings"
        android:layout_below="@id/vendor_id_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dip"
        android:textAppearance="@style/standard"/>

    <LinearLayout
        android:id="@+id/separator_2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/black"
        android:layout_below="@id/connection_settings">
    </LinearLayout>

    <TextView
        android:id="@+id/url_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:layout_below="@id/separator_2"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:textAppearance="@style/standard"/>

    <EditText
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:layout_below="@id/separator_2"
        android:layout_toRightOf="@+id/compression"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/url_label"
        android:gravity="right"
        android:textAppearance="@style/standard"/>

    <CheckBox
        android:id="@+id/auto_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_connect"
        android:layout_below="@id/url_label"
        android:layout_marginLeft="3dip"
        android:textAppearance="@style/standard"/>

    <CheckBox
        android:id="@+id/reconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reconnect"
        android:layout_below="@id/auto_connect"
        android:layout_marginLeft="3dip"
        android:textAppearance="@style/standard"/>

    <TextView
        android:id="@+id/reconnect_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reconnect_time"
        android:layout_below="@id/reconnect"
        android:layout_marginLeft="35dip"
        android:layout_marginTop="5dip"
        android:textAppearance="@style/standard"/>

    <EditText
        android:id="@+id/reconnect_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textSize="14sp"
        android:layout_below="@id/reconnect"
        android:layout_toRightOf="@id/reconnect_time_label"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/reconnect_time_label"
        android:gravity="right"
        android:textAppearance="@style/standard"/>

    <CheckBox
        android:id="@+id/secure_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_secure_connection"
        android:layout_below="@id/reconnect_time_label"
        android:layout_marginLeft="3dip"
        android:textAppearance="@style/standard"/>

    <CheckBox
        android:id="@+id/compression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_compression"
        android:layout_below="@id/secure_connection"
        android:layout_marginLeft="3dip"
        android:textAppearance="@style/standard"/>

    <CheckBox
        android:id="@+id/system_monitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_system_monitor"
        android:layout_below="@id/compression"
        android:layout_marginLeft="3dip"
        android:textAppearance="@style/standard"/>

    <Button
        android:id="@+id/datapoints"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:text="@string/datapoints"
        android:layout_marginTop="10dip"
        android:layout_below="@id/system_monitor"
        android:layout_alignParentLeft="true"
        style="@style/button"/>

    <Button
        android:id="@+id/refresh"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:layout_marginTop="10dip"
        android:layout_below="@id/system_monitor"
        android:layout_toLeftOf="@+id/save"
        style="@style/button"/>

    <Button
        android:id="@+id/save"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_below="@id/system_monitor"
        android:layout_alignParentRight="true"
        style="@style/button"/>
</RelativeLayout>
