<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp"
        android:textColor="@color/black"
        android:text="@string/description_data_point"/>

    <TextView
        android:id="@+id/type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_text"
        android:text="@string/data_point_type"
        android:layout_marginTop="15dip"
        android:layout_marginStart="20dip"
        android:textColor="@color/black"/>

    <Spinner
        android:id="@+id/data_point_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_text"
        android:layout_toEndOf="@+id/value_label"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="5dip"
        android:textAppearance="@style/standard"/>

    <TextView
        android:id="@+id/value_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_point_type_spinner"
        android:text="@string/data_point_value"
        android:layout_marginTop="15dip"
        android:layout_marginStart="20dip"
        android:textColor="@color/black"
        android:labelFor="@+id/value_text" />

    <EditText
        android:id="@+id/value_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_point_type_spinner"
        android:layout_toEndOf="@id/value_label"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="-5dip"
        android:text="@string/default_data_point_value"
        android:inputType="text" />

    <TextView
        android:id="@+id/data_points_number_label"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:layout_below="@id/value_label"
        android:text="@string/number_of_data_points"
        android:layout_marginTop="20dip"
        android:layout_marginStart="20dip"
        android:textColor="@color/black"/>

    <com.digi.android.sample.cloudconnector.NumberPicker
        android:id="@+id/data_points_number"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:layout_below="@id/value_label"
        android:layout_alignBottom="@id/data_points_number_label"
        android:layout_toEndOf="@id/data_points_number_label"
        android:layout_marginStart="10dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="7dip"
        android:layout_below="@id/data_points_number"/>

</RelativeLayout>